push that thang
get pushin

--- a/index.html
+++ b/index.html
@@ -89,6 +89,47 @@
             margin-right: 2vw;
             margin-bottom: 10vw;
         }
+        @media screen and (max-width: 1024px) {
+            body{
+                /* background-color: black; */
+            }
+            h1{
+                font-size: 3em;
+            }
+            .top{
+                display: flex;
+                width: 100%;
+                justify-self: center;
+            }
+            .top h2{
+
+                font-size: 2em;
+                justify-items: center;
+                /* margin-left: 24vw; */
+                /* align-items: center; */
+            }
+            .left p{
+                /* font-size: 1.3em; */
+                /* width: 200%; */
+            }
+            .lower, .top{
+                display: flex;
+                flex-wrap: wrap;
+                /* width: 50%; */
+                height: 200%;
+                justify-content: center;
+                /* width: 70%; */
+                /* background-color: black; */
+            }
+            .f-text{
+                /* width: 80%; */
+                /* background-color: black; */
+            }
+            .left{
+                justify-content: center;
+                width: 80%;
+            }
+        }
 </style>
 </head>
 <body>
@@ -99,6 +140,7 @@
         </div>
         <div class="lower gap">
             <div class="left">
+                <div class="f-text">
                 <p>
                     Canadians celebrate thanksgiving in October, 
                     they celebrate it on the second Monday of October, 
@@ -110,8 +152,11 @@
                     , squash and rolls, with cranberry sauce on the side 
                     and <strong>Pumpkin Pie</strong> for dessert, is very typical across Canada. 
                 </p>
+                
+
                 <p>Click <a href="recipe.html"><strong><em>here </em></strong></a>for the recipe</p>
                 <p>Click <a href="alter.html"><strong><em>here </em></strong></a>to see what you could alter in this meal</p>
+            </div>
             </div>
             <div class="right">
                 <img src="imgs/page-1/image1.png" alt="Canada-Pumpkin-Pie">
