--- a/dishes-around-the-world.htm
+++ b/dishes-around-the-world.htm
@@ -119,7 +119,23 @@
 
 
 
-
+@media screen and (max-width: 1440px){
+    h1{
+        font-size: 3em;
+    }
+    .menu-talk h2{
+        font-size: 1.5em;
+    }
+    .menu-talk p{
+        font-size: .9em;
+    }
+    .one{
+        font-size: .8em;
+    }
+    h3{
+        font-size: .4em;
+    }
+}
 
 
 
