--- a/index.html
+++ b/index.html
@@ -129,6 +129,9 @@
                 justify-content: center;
                 width: 80%;
             }
+            footer h3{
+                font-size: .5em;
+            }
         }
 </style>
 </head>
