--- a/alter.html
+++ b/alter.html
@@ -6,6 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="hr.css">
+    <style>
+         @media screen and (max-width: 1024px){
+            li{
+                font-size: .5em;
+            }
+         }
+    </style>
 </head>
 <body>
     <a href="index.html"><h2>Back</h2></a>
