--- a/recipe.html
+++ b/recipe.html
@@ -47,6 +47,14 @@
                 margin-bottom: 1vw;
                 /* background-color: black; */
             }
+            @media screen and (max-width: 1024px){
+                /* .content h4{
+                    font-size: 1em;
+                } */
+                 li{
+                    font-size: .5em;
+                 }
+            }
     </style>
 </head>
 <body>
