--- a/tourte.html
+++ b/tourte.html
@@ -4,7 +4,8 @@
  <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Thanksgiving Turkey</title>
+    <link rel="icon" href="imgs/image.png">
     <link rel="stylesheet" href="hr.css">
     <style>
        @media screen and (max-width: 1024px){
